# Aetheris

./: .gitignore  .golangci.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMUNITY.md  COMMUNITY_GROWTH.md  CONTRIBUTING.md  Makefile  OPEN_SOURCE_FEASIBILITY_REPORT.md  PROJECT-BOARD.md  README-2.0-3.0.md  README.md  ROADMAP.md  ai-customer-bot  awesome-lists-submission.md  generate_test_data.sh  go.mod  go.sum  social-announcement.md  supervisor_agent  test_agent.sh  test_all_agents.sh  test_complete.sh  test_eino_agent.sh  test_eino_tools.sh  test_qwen.sh  test_real_agent.sh  test_real_tools.sh
.github/: ISSUES_PLAN.md  copilot-instructions.md  labels.json
benchmark/: README.md
benchmarks/: README.md
blog/: 01-why-agent-runtime.md  02-architecture-event-sourcing.md  03-at-most-once.md  04-checkpoint-recovery.md  05-human-in-the-loop.md  06-langgraph-autogen-integration.md  07-audit-debugging.md  08-multi-worker-deployment.md  09-performance-optimization.md  10-production-deployment.md
configs/: agents.yaml  api.embedded.yaml  api.yaml  model.yaml  worker.embedded.yaml  worker.yaml
design/: DDD-Design.md  aetheris-2.0-overview.md  core.md  embodied-ai.md  execution-guarantees.md  fatal-correctness-tests.md  flow-control.md  memory-pipeline.md  model-router.md  performance-tuning.md  runtime-core-diagrams.md  rust-to-go-transition.md  safety-constraints.md  scheduler-correctness.md  (+3 more)
sdk/python/: README.md  pyproject.toml
sdk/python/aetheris/: __init__.py  client.py
sdk/python/aetheris/integrations/: __init__.py  embedded.py  langchain.py  langgraph.py
sdk/python/tests/: test_client.py  test_embedded_integration.py  test_langchain_integration.py  test_langgraph_integration.py
(+914 files in other folders)
